Testing with refinement

--- a/config/config.json
+++ b/config/config.json
@@ -2,6 +2,7 @@
 	"normal_cam": false,
 	"dyn_cons": false,
 	"filter": false,
+	"refine": false,
 	"min_consistent": 2,
 	"max_error": 2.0,
 	"max_diff": 0.01,
